Add email to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <footer>
   <span>
+    <a href="mailto:jusgolds@gmail.com">email</a>
+    <br>
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}.
   </span>
 </footer>
