--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,7 @@
     </a>
     <ul>
       <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
-      <li><a href="{{ '/blog' | prepend: site.baseurl }}/">Blog</a></li>
+<!--      <li><a href="{{ '/blog' | prepend: site.baseurl }}/">Blog</a></li> --->
     </ul>
   </div>
 </nav>
